# nifti

./: .env.dev  .gitignore  Makefile  README.md  requirements.txt  setup.cfg
src/: convert.py  to_nifti.py  to_npy.py
