[metadata]
name = nifti-mhariri
version = 0.0.1
author = Mohsen Hariri
author_email = mxh1029@case.edu
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mohsenhariri/bp-python
project_urls =
    Bug Tracker = https://github.com/pypa/bp-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLV3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src